
33. Fix: fixed more problems with variable exporting when a block is pulled.

34. Change: uninitialized connections and queries in mysqlm give a meaningful error message instead of throwing an exception.

35. Change: style issues for non-meaningful names expanded to include amount, const, func, info, input, output, parm/s, param/s, proc,variable and variables.  Left result in.

36. Fix: previous help options no longer linger to another help command invocation.

37. help -t shows todo pragmas and summary of work. help -c shows teamwork pragmas.

38. Fix: pathname expansion of shell words no longer double slash when the directory is a single slash.

39. Fix: pathname expansion of tilde no longer intermittently happens in the middle of a shell word.

40. New: teams package has a new work priority type: work_priority.cvss

41. New: pragma todo's checked during late SDLC stages.

42. New: pragma suppress( low_priority_todos_for_release ) and suppress( all_todos_for_release ).  Allow low-priority todo's in late SDLC stages.  New teams_priority.completed priority.

43. Fix: Using @ with ? no longer results in an infinite loop, locking up SparForte.

44. Change: Example programs updated: chomp, chomp2, count_statements, factorial, fibonacci, filecopy, file_creation, int_sort, roman_numerals.

45. Fix: shell and http_cgi variables no longer try to save value when exported variable is destroyed.

46. New: /etc/sparforte_policy file for global script architecture policies.

47: Fix: error messages for include/policy file permissions no longer say "include file" but make clear what file has the permission issues.

48. Fix: compilation errors when disabling all database types during configuration fixed.

49. New: New example programs opengl_first (created earlier), opengl_second (created earlier), randdev, randuni.

50. Fix: "; @" in a pragma chain no longer puts the interpreter into an infinite loop, now reports correct error.
