@@ -48,19 +48,25 @@ SparForte.</p>
 
 <h3>Setting Your Architecture Constraints</h3>
 
-<p>If you're working with architects, or with your company has
-architectural policies, you can start a new project by creating
-or updating the SparForte global policy file.  This is the file
-that contains the pragmas that will be applied to all projects
-on a server.  Create an /etc/sparforte_policy file and describe
-the architectural constraints for your project.</p>
+<p>If you are working in a medium to large size organization, you may have
+to work with architects and system administrators.  Before starting your
+SparForte project, you can work with them to setup global architectural
+policy and configuration files.</p>
 
-<p>For example, if you are working in a company that uses the
-Ada programming language a lot, you may want to make all
-SparForte scripts conform as closely as possible to Ada to
-make it easier to reuse program code.  You could make that
-a global policy by putting <b>pragma ada_95</b> into the
-global policy file.</p>
+<p>The global policy file is named "/etc/sparforte_policy".  This file
+is for the architects.  It only runs for scripts, and it contains pragmas
+(interpreter directives) that will apply to all projects on the server.</p>
+
+<p>The global configuration file is named "/etc/sparforte_config".  This
+file is for system administrators.  It only runs for scripts and it contains
+declarations of system resources that will apply to all projects on a
+server.</p>
+
+<p>For example, if you are working in a company that uses the Ada
+programming language a lot, you may want to make all SparForte scripts
+conform as closely as possible to Ada to make it easier to reuse program
+code.  You could make that a global policy by putting <b>pragma ada_95</b>
+into the global policy file.</p>
 
         <center>
         <div class="code">
@@ -76,12 +82,10 @@ global policy file.</p>
 
 <h3>Structuring a Script</h3>
 
-<p>Suppose you want to write a script that does something useful,
-such
-as email someone with a "bob" login when there are files waiting in a
-certain
-directory. In SparForte, the following commands can do the job:
-</p>
+<p>Suppose you want to write a script for your project that does something
+useful, such as email someone with a "bob" login when there are files
+waiting in a certain directory. In SparForte, the following commands can
+do the job:</p>
 
         <center>
         <div class="code">
@@ -105,26 +109,23 @@ directory. In SparForte, the following commands can do the job:
 executes?</li>
   <li>How does the script inform the program if it succeeds or fails?</li>
   <li>What happens if the ls command was accidentally deleted or
-altered by
-the
-system administrator (these things happen)?</li>
+altered by the system administrator (these things happen)?</li>
 </ul>
 
 <p>SparForte scripts can be more than a list of commands. SparForte has a number of
 features that allow scripts to be "well-structured" (or modular). Well-structured
 scripts
 are easier to read and debug. Here's an example of a well-structured
-SparForte
-script:</p>
+SparForte script:</p>
 
         <center>
         <div class="code">
         <p class="code">
 	#!/usr/local/bin/spar<br>
 	&nbsp;<br>
-	<b>pragma</b> annotate( summary, "checkfiles.sp" );<br>
-	<b>pragma</b> annotate( description, "check the files in the incoming directory and email someone when the files arrive." );<br>
-	<b>pragma</b> annotate( author, "Ken O. Burtch" );<br>
+	<b>pragma</b> annotate( summary, "checkfiles.sp" )<br>
+	&nbsp;&nbsp;@( description, "check the files in the incoming directory and email someone when the files arrive." )<br>
+	&nbsp;&nbsp;@( author, "Ken O. Burtch" );<br>
 	&nbsp;<br>
 	<b>procedure</b> checkfiles is<br>
 	-- declarations<br>
@@ -451,7 +452,7 @@ team : teams.member;<br>
 fred_smith : teams.member;<br>
 ...<br>
 <span style="font-weight: bold;">function</span> get_stock_holdings <span style="font-weight: bold;">return</span> float <span style="font-weight: bold;">is</span><br>
-&nbsp;&nbsp;<span style="font-weight: bold;">pragma</span> todo( team, "create get_stock_holdings", work_measure.story_points, 5, work_priority.level, 'm' );;<br>
+&nbsp;&nbsp;<span style="font-weight: bold;">pragma</span> todo( team, "create get_stock_holdings", work_measure.story_points, 5, work_priority.level, 'm' );<br>
 <span style="font-weight: bold;">begin</span><br>
 &nbsp;&nbsp;<span style="font-weight: bold;">return</span> 0;<br>
 <span style="font-weight: bold;">end</span> get_stock_holdings;<br>&nbsp;<br>
@@ -513,7 +514,7 @@ projects or teams with geographically remote members.</p>
 
 <p>The help command will display these messages, which can be filtered
 with a command like <span style="font-weight: bold;">grep</span> and <span style="font-weight: bold;">sort</span> to see the ones you are
-interested in..</p>
+interested in.</p>
 
 <h3>Debugging</h3>
 
